--- a/src/components/login/login.scss
+++ b/src/components/login/login.scss
@@ -43,6 +43,10 @@
     }
   }
 
+  &__create{
+    flex-shrink: 1;
+  }
+
   &_error {
     outline: 1px solid $colorBorderError;
   }
