--- a/src/components/registration/registration.scss
+++ b/src/components/registration/registration.scss
@@ -63,6 +63,10 @@
     }
   }
 
+  &__login{
+    flex-shrink: 1;
+  }
+
   &_error {
     outline: 1px solid $colorBorderError;
   }
